fix: fixed the sparkler alignment

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -640,6 +640,11 @@ $color-footer: #1B1B1B;
                 margin-top: 8rem;
                 // margin-left: 7rem;
 
+                .sparkler {
+                    margin-top: 1rem;
+                    text-align: center;
+                }
+
                 &-heading {
                     text-align: center;
                     font-size: 2.5rem;
